--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,3 +4,42 @@
 
 "PhysRev":
   url: https://journals.aps.org/
+
+"CVPR":
+  url:
+ 
+"ECCV":
+  url:
+
+"ICCV":
+  url:
+ 
+"ICML":
+  url:
+
+"NeurIPS":
+  url:
+
+"ICLR":
+  url:
+
+"EMNLP":
+  url:
+
+"TPMAI":
+  url:
+
+"TMM":
+  url:
+
+"NN":
+  url:
+
+"KDD":
+  url:
+
+"AAAI":
+  url:
+
+"IJCAI":
+  url:
